# type_challenges

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
advanced/: callable-protocol.py  overload.py  protocol.py  typed-dict-1.py
basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
