[project]
name = "type-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Vera Adzhieva",email = "vera.adzhieva3003@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)"
]
